# openappsec

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  Scoring_Mechanisms_Summary.md  cppcheck.cmake  unit_test.cmake
build_system/docker/: CMakeLists.txt  Dockerfile  entry.sh
components/: CMakeLists.txt
components/attachment-intakers/: CMakeLists.txt
components/generic_rulebase/: CMakeLists.txt  assets_config.cc  generic_rulebase.cc  match_query.cc  parameters_config.cc  triggers_config.cc  zone.cc  zones_config.cc
components/gradual_deployment/: CMakeLists.txt  gradual_deployment.cc
components/health_check_manager/: CMakeLists.txt  health_check_manager.cc
components/http_manager/: CMakeLists.txt  http_manager.cc  http_manager_opaque.cc  http_manager_opaque.h
components/http_transaction_data/: http_transaction_data.cc
components/include/: AssetIndicatorsSyncUnit.h  UnifiedIndicatorsContainer.h  WaapEnums.h  attachment_registrator.h  byteorder.h  central_nginx_manager.h  details_resolver.h  downloaded_certificate.h  downloader.h  env_details.h  external_sdk_server.h  geo_location.h  gradual_deployment.h  health_check_manager.h  health_checker.h  http_geo_filter.h  http_inspection_events.h  http_manager.h  http_transaction_common.h  http_transaction_data.h  hybrid_mode_telemetry.h  hyperscan_hook.h  i_details_resolver.h  i_downloader.h  i_external_sdk_server.h  i_generic_rulebase.h  i_geo_location.h  i_gradual_deployment.h  i_http_manager.h  i_k8s_policy_gen.h  i_keywords_rule.h  i_local_policy_mgmt_gen.h  i_manifest_controller.h  i_oa_schema_updater.h  i_orchestration_status.h  i_orchestration_tools.h  i_package_handler.h  i_pm_scan.h  i_serialize.h  i_service_controller.h  (+47 more)
components/include/generic_rulebase/: asset.h  (+10 more)
components/messaging_downloader/: CMakeLists.txt  messaging_downloader_client.cc  messaging_downloader_server.cc
components/nginx_message_reader/: CMakeLists.txt  nginx_message_reader.cc
components/packet/: CMakeLists.txt  packet.cc
components/pending_key/: CMakeLists.txt  pending_key.cc
components/report_messaging/: CMakeLists.txt  report_messaging.cc
components/security_apps/: CMakeLists.txt
components/signal_handler/: CMakeLists.txt  signal_handler.cc
components/unified_learning/: AssetIndicatorsSyncUnit.cc  unified_learning_comp.cc
components/utils/: CMakeLists.txt
core/: CMakeLists.txt  README.md
core/agent_core_utilities/: CMakeLists.txt  agent_core_utilities.cc
core/agent_details/: CMakeLists.txt  agent_details.cc
core/agent_details_reporter/: CMakeLists.txt  agent_details_report.cc  agent_details_reporter.cc
core/attachments/: CMakeLists.txt
core/buffers/: CMakeLists.txt  buffer.cc  buffer_eval.cc  char_iterator.cc  data_container.cc  segment.cc
core/compression/: CMakeLists.txt  compression_utils.cc
core/config/: CMakeLists.txt  config.cc  config_cache_stats.cc  config_globals.cc  config_specific.cc
core/connkey/: CMakeLists.txt  connkey.cc  connkey_eval.cc
core/core_ut/: CMakeLists.txt  cache_ut.cc  common_ut.cc  enum_array_ut.cc  enum_range_ut.cc  maybe_res_ut.cc  tostring_ut.cc  virtual_container_ut.cc
core/cptest/: CMakeLists.txt  cptest.cc  cptest_data_buf.cc  cptest_tcppacket.cc
core/cpu/: CMakeLists.txt  cpu.cc
core/curl_http_client/: CMakeLists.txt  curl_http_client.cc
core/debug_is/: CMakeLists.txt  debug.cc  debug_ex.h  debug_streams.cc
core/encryptor/: CMakeLists.txt  encryptor.cc
core/env_details/: env_details.cc
core/environment/: CMakeLists.txt  base_evaluators.cc  context.cc  environment.cc  evaluator_registration.h  param_attr.cc  parsing.cc  span.cc  trace.cc
core/event_is/: CMakeLists.txt  listener.cc
core/external_sdk/: external_agent_sdk.h
core/instance_awareness/: CMakeLists.txt  instance_awareness.cc
core/intelligence_is_v2/: CMakeLists.txt  asset_replay.cc  bulk_query_response_v2.cc  intelligence_comp_v2.cc  intelligence_request.cc  intelligence_response.cc  intelligence_server.cc  intelligence_types_v2.cc  invalidation.cc  json_stream.cc  query_filter_v2.cc  query_request_v2.cc  query_types_v2.cc  requested_attributes_v2.cc
core/logging/: CMakeLists.txt  cef_stream.cc  debug_stream.cc  file_stream.cc  fog_stream.cc  k8s_svc_stream.cc  log_connector.cc  log_generator.cc  log_streams.h  logging.cc  logging_metric.h  syslog_stream.cc
core/mainloop/: CMakeLists.txt  coroutine.cc  coroutine.h  mainloop.cc
core/memory_consumption/: CMakeLists.txt  memory_consumption.cc  memory_metric.h
core/message/: CMakeLists.txt  http_core.cc  http_decoder.cc  http_decoder.h  http_encoder.cc  i_message_decoder.h  message.cc  message_metric.h  smart_bio.h
core/messaging/: CMakeLists.txt  messaging.cc
core/messaging_buffer/: CMakeLists.txt  bucket_manager.cc  event_queue.cc  messaging_buffer.cc
core/metric/: CMakeLists.txt  generic_metric.cc  metric_scraper.cc
core/report/: CMakeLists.txt  report.cc  tag_and_enum_management.cc
core/report_messaging/: CMakeLists.txt
core/rest/: CMakeLists.txt  i_rest_invoke.h  rest.cc  rest_conn.cc  rest_conn.h  rest_server.cc
core/shell_cmd/: CMakeLists.txt  shell_cmd.cc
core/shm_pkt_queue/: CMakeLists.txt  shared_string_wrapper.h  shm_pkt_queue.cc
core/shmem_ipc/: CMakeLists.txt  shared_ipc_debug.h  shared_ring_queue.c  shared_ring_queue.h  shmem_ipc.c
core/singleton/: CMakeLists.txt  singleton.cc
core/socket_is/: CMakeLists.txt  socket_is.cc
core/table/: CMakeLists.txt  opaque_repo.cc  table.cc
core/tenant_manager/: CMakeLists.txt  tenant_manager.cc
core/time_proxy/: CMakeLists.txt  time_proxy.cc
core/version/: CMakeLists.txt  build_version_vars_h.py  version.cc
nodes/: CMakeLists.txt  packaging.cmake
nodes/agent_cache/: CMakeLists.txt
nodes/attachment_registration_manager/: CMakeLists.txt  main.cc
nodes/central_nginx_manager/: CMakeLists.txt  main.cc
nodes/http_transaction_handler/: CMakeLists.txt  main.cc
nodes/orchestration/: CMakeLists.txt  main.cc
nodes/prometheus/: CMakeLists.txt  main.cc
nodes/unified_learning_service/: main.cc
(+1265 files in other folders)
